--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm run typecheck
     
       - name: Run tests
-        run: npm run test -- --maxWorkers=2 --watchAll=false --coverage
+        run: npm run test -- --watchAll=false --coverage
   
       - name: Present and Upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
