--- a/.squash.yml
+++ b/.squash.yml
@@ -11,3 +11,6 @@ deployments:
     port_forwarding: 80:3000
     run_options: 
       - --env REACT_APP_TALAWA_URL="https://talawaapi.azurewebsites.net/graphql"
+    auto_shutdown_by_merge:
+        enabled: true
+        base_branch: develop
