--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,53 @@
         "extensions": [".tsx"]
       }
     ],
+    "@typescript-eslint/ban-types": "error",
+    "@typescript-eslint/no-duplicate-enum-values": "error",
+    "@typescript-eslint/array-type": "error",
+    "@typescript-eslint/consistent-type-assertions": "error",
+    "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/naming-convention": [
+      "error",
+      // Interfaces must begin with Interface or TestInterface followed by a PascalCase name
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "prefix": ["Interface", "TestInterface"]
+      },
+      // Type Aliases must be in PascalCase
+      {
+        "selector": ["typeAlias", "typeLike", "enum"],
+        "format": ["PascalCase"]
+      },
+      {
+        "selector": "typeParameter",
+        "format": ["PascalCase"],
+        "prefix": ["T"]
+      },
+      {
+        "selector": "variable",
+        "format": ["camelCase", "UPPER_CASE"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "parameter",
+        "format": ["camelCase"],
+        "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "function",
+        "format": ["camelCase"]
+      },
+      {
+        "selector": "memberLike",
+        "modifiers": ["private"],
+        "format": ["camelCase"],
+        "leadingUnderscore": "require"
+      },
+
+      { "selector": "variable", "modifiers": ["exported"], "format": null }
+    ],
     // Ensures that components are always written in PascalCase
     "react/jsx-pascal-case": [
       "error",
