--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -67,6 +67,8 @@ jobs:
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
+        with:
+          node-version: '16'
       
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
