--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -67,6 +67,9 @@ jobs:
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
       
