--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -73,6 +73,9 @@ jobs:
         with:
           node-version: '16.14.1'
       
+      - name: resolve dependency
+        run: npm install && npm install core-js@3.0.0-beta.11
+
       - name: Install Graphql-Inspector Globally
         run: npm install -g graphql-inspector
       
