--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -74,7 +74,7 @@ jobs:
           node-version: '16.14.1'
         
       - name: resolve dependency
-        run: npm install -g @grapqhl-inspector/cli
+        run: npm install -g @graphql-inspector/cli
 
       
       - name: Validate Documents
