--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -35,3 +35,25 @@ jobs:
           verbose: true
           fail_ci_if_error: false
           name: '${{env.CODECOV_UNIQUE_NAME}}'
+  Graphql-Inspector:
+    name: Runs Introspection on the github talawa-api repo on the schema.graphql file
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout the Repository
+        uses: actions/checkout@v3
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.14.1'
+        
+      - name: resolve dependency
+        run: npm install -g @graphql-inspector/cli
+
+      
+      - name: Validate Documents
+        run: graphql-inspector validate './src/GraphQl/**/*.ts' github:PalisadoesFoundation/talawa-api#develop:schema.graphql --token '${{secrets.REPO_READ_ONLY}}'
+
+      
+       
