Introduce the tag generation into the repository

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,2 +1,4 @@
 node_modules
 .github
+# Contains the PDF file of the Tag as JSON string, thus does not need to be formatted
+src/components/CheckIn/tagTemplate.ts
