--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -17,6 +17,7 @@ on:
 
 env:
     CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
+    READ_ONLY: ${{secrets.REPO_READ_ONLY}}
     
 jobs:
 
@@ -63,22 +64,25 @@ jobs:
   Graphql-Inspector:
     name: Runs Introspection on the github talawa-api repo on the schema.graphql file
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
+       
       
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16.14.1'
         
+        
       - name: resolve dependency
         run: npm install -g @graphql-inspector/cli
 
       
       - name: Validate Documents
-        run: graphql-inspector validate './src/GraphQl/**/*.ts' github:PalisadoesFoundation/talawa-api#develop:schema.graphql --token `${{ secrets.REPO_READ_ONLY }}`
+        run: graphql-inspector validate './src/GraphQl/**/*.ts' github:PalisadoesFoundation/talawa-api#develop:schema.graphql --token `${{ env.READ_ONLY}}`
+       
+        
 
       
        
