--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "talawa-admin",
   "version": "3.0.0",
   "private": true,
   "type": "module",
@@ -13,7 +13,7 @@
     "@mui/material": "^5.13.3",
     "@mui/x-data-grid": "^6.8.0",
     "@mui/x-date-pickers": "^6.6.0",
-    "@pdfme/generator": "^1.2.3",
+    "@pdfme/generator": "^1.2.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
