--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "flag-icons": "^6.6.6",
     "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.6",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
@@ -53,6 +54,8 @@
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "typedoc": "^0.24.8",
+    "typedoc-plugin-markdown": "^3.15.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
