--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
   },
 
   // Specify the ESLint plugins tobe used
-  "plugins": ["react", "@typescript-eslint", "react-hooks", "jest"],
+  "plugins": ["react", "@typescript-eslint", "jest"],
   "rules": {
     "react/destructuring-assignment": ["off"],
     "@typescript-eslint/no-explicit-any": ["off"],
@@ -49,7 +49,13 @@
     "@typescript-eslint/array-type": "error",
     "@typescript-eslint/consistent-type-assertions": "error",
     "@typescript-eslint/consistent-type-imports": "error",
-    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/explicit-function-return-type": [
+      2,
+      {
+        "allowExpressions": true,
+        "allowTypedFunctionExpressions": true
+      }
+    ],
     "@typescript-eslint/naming-convention": [
       "error",
       // Interfaces must begin with Interface or TestInterface followed by a PascalCase name
