--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "typedoc": "^0.24.8",
+    "typedoc-plugin-markdown": "^3.15.4",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
