--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -102,7 +102,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
-        API_TOKEN_GITHUB: ${{ secrets.TALAWA_DOCS_SYNC }}    
+        API_TOKEN_GITHUB: ${{ secrets.TALAWA_DOCS_SYNC_NEW }}    
       with:
         source_file: 'talawa-admin-docs/'
         destination_repo: 'PalisadoesFoundation/talawa-docs'
