--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.14.1",
+    "@mui/private-theming": "^5.14.13",
+    "@mui/system": "^5.14.12",
     "@mui/x-charts": "^6.0.0-alpha.13",
     "@mui/x-data-grid": "^6.8.0",
     "@mui/x-date-pickers": "^6.6.0",
