Added WEBSOCKET_URL in .env.example

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ REACT_APP_USE_RECAPTCHA=
 # Note: In domains, fill localhost 
 
 REACT_APP_RECAPTCHA_SITE_KEY=
+
+# has to be inserted in the env file to use plugins and other websocket based features.
+REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
