--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-i18next": "^11.18.1",
+    "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
