--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,7 +46,7 @@ jobs:
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
-        run: npm ci
+        run: npm install --legacy-peer-deps
       - run: npm run test -- --watchAll=false --coverage
       - name: Present and upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
@@ -79,7 +79,7 @@ jobs:
 
         name: Install dependencies
         continue-on-error: true
-        run: npm ci
+        run: npm install --legacy-peer-deps
 
       - name: Install TypeScript Globally and add GraphQL tag
         run: yarn global add typescript
