Fixing invalid syntax in push.yml from #1162
Fixes #1162

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -76,7 +76,7 @@ jobs:
             ${{ runner.os }}-generate-docs-
             ${{ runner.os }}-
 
-        name: Install dependencies
+      - name: Install dependencies
         run: npm install --legacy-peer-deps
 
       - name: Install TypeScript Globally and add GraphQL tag
