--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -16,12 +16,10 @@ on:
       - '**'
 
 env:
-    CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
-    
+  CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
+
 jobs:
-
   Continuous-Integration:
-
     name: Performs linting, formatting, type-checking and testing on the application
     runs-on: ubuntu-latest
     steps:
@@ -31,9 +29,12 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Install TypeScript
+        run: npm install -g typescript
+
       - name: Run linting check
         run: npm run lint:check
-      
+
       - name: Count number of lines
         run: |
           chmod +x ./.github/workflows/countline.py
@@ -43,36 +44,37 @@ jobs:
         run: npm run format:check
 
       - name: Check for type errors
-        run: npm run typecheck
-    
+        run: tsc --skipLibCheck
+
       - name: Run tests
         run: npm run test -- --watchAll=false --coverage
-  
+
       - name: Present and Upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
         with:
           verbose: true
           fail_ci_if_error: false
-          name: '${{env.CODECOV_UNIQUE_NAME}}'    
+          name: '${{env.CODECOV_UNIQUE_NAME}}'
 
       - name: Test acceptable level of code coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
           path: "./coverage/lcov.info"
           min_coverage: 95.0
+
   Graphql-Inspector:
     name: Runs Introspection on the github talawa-api repo on the schema.graphql file
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the Repository
         uses: actions/checkout@v3
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16.14.1'
-        
-      - name: resolve dependency
+
+      - name: Resolve dependency
         run: npm install -g @graphql-inspector/cli
 
       - name: Clone API repository
