--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -32,9 +32,6 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
 
-      - name: Run linting check
-        run: npm run lint:check
-
       - name: Count number of lines
         run: |
           chmod +x ./.github/workflows/countline.py
@@ -60,7 +57,11 @@ jobs:
               npx tsc --noEmit "$file"
             fi
           done
-
+          
+      - name: Run linting check
+        if: steps.changed-files.outputs.only_changed != 'true'
+        run: npm run lint:check
+        
       - name: Present and Upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
         uses: codecov/codecov-action@v3
         with:
