--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "typedoc-plugin-markdown": "^3.16.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1",
-    "yarn": "^1.22.17"
+    "yarn": "^1.22.17",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "serve": "react-scripts start",
