--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "js-cookie": "^3.0.1",
+    "postcss-modules": "^6.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
