--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -20,10 +20,8 @@ env:
   CODECOV_UNIQUE_NAME: CODECOV_UNIQUE_NAME-${{ github.run_id }}-${{ github.run_number }}
 
 jobs:
-
-  Continuous-Integration:
-
-    name: Performs linting, formatting, type-checking, and testing on the application
+  Code-Quality-Checks:
+    name: Performs linting, formatting, type-checking
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the Repository
@@ -49,14 +47,32 @@ jobs:
         if: steps.changed-files.outputs.only_changed != 'true'
         run: npm run typecheck
 
+      - name: Run linting check
+        if: steps.changed-files.outputs.only_changed != 'true'
+        run: npm run lint:check  
+
+
+  Test-Application:
+    name: Test Application
+    runs-on: ubuntu-latest
+    needs: [Code-Quality-Checks]
+    steps:
+      - name: Checkout the Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.14.1'
+      
+      - name: Get changed TypeScript files
+        id: changed-files
+        uses: tj-actions/changed-files@v40
+          
       - name: Run tests
         if: steps.changed-files.outputs.only_changed != 'true'
         run: npm run test -- --watchAll=false --coverage       
       
-      - name: Run linting check
-        if: steps.changed-files.outputs.only_changed != 'true'
-        run: npm run lint:check
-
       - name: TypeScript compilation for changed files
         run: |
           for file in ${{ steps.changed-files.outputs.all_files }}; do
