--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -60,10 +60,8 @@ jobs:
       - name: Checkout the Repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.14.1'
+      - name: Install Dependencies
+        run: npm install --legacy-peer-deps
       
       - name: Get changed TypeScript files
         id: changed-files
