--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -97,7 +97,7 @@ jobs:
           npx typedoc --entryPoints src/components src/screens --out talawa-admin-docs --plugin typedoc-plugin-markdown --theme markdown --entryPointStrategy expand --exclude "**/*.test.ts" --exclude "**/*.css"
           
       - name: Make Markdown Files MPX Compatible
-        run: python ./script.py --directory talawa-admin-docs 
+        run: python ./md_mpx_format_adjuster.py --directory talawa-admin-docs 
           
       - name: Checking doc updated
         id: DocUpdated
