--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -52,6 +52,34 @@ jobs:
         run: npm run lint:check  
 
 
+  Check-Changed-Files:
+    runs-on: ubuntu-latest
+    needs: Code-Quality-Checks
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install black pydocstyle
+
+      - name: Run Python script
+        run: |
+          python .github/workflows/check_changed_files.py "${{ github.base_ref }}" "${{ github.head_ref }}"
+
+      - name: Run Black
+        run: black .
+
+      - name: Run Pydocstyle
+        run: pydocstyle .
+
   Test-Application:
     name: Test Application
     runs-on: ubuntu-latest
