--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "i18next-http-backend": "^1.4.1",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
+    "markdown-toc": "^1.2.0",
     "node-sass": "^9.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
@@ -79,7 +80,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\"",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
-    "jest-preview": "jest-preview"
+    "jest-preview": "jest-preview",
+    "update:toc": "node scripts/githooks/update-toc.js"
   },
   "eslintConfig": {
     "extends": [
