--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -51,6 +51,11 @@ jobs:
         if: steps.changed-files.outputs.only_changed != 'true'
         run: npm run lint:check  
 
+      - name: Compare translation files
+        run: |
+          chmod +x .github/workflows/compare-translation-files.py
+          python .github/workflows/compare-translation-files.py --directory public/locales
+
 
   Test-Application:
     name: Test Application
