--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
+    "inquirer": "^9.2.12",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
     "node-sass": "^9.0.0",
@@ -79,7 +80,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\"",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
-    "jest-preview": "jest-preview"
+    "jest-preview": "jest-preview",
+    "setup": "tsx setup.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -105,6 +107,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/enzyme": "^3.10.9",
+    "@types/inquirer": "^9.0.7",
     "@types/js-cookie": "^3.0.2",
     "@types/react": "^17.0.14",
     "@types/react-router-dom": "^5.1.8",
@@ -120,7 +123,8 @@
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
     "jquery": "^3.2.1",
-    "postcss-modules": "^6.0.0"
+    "postcss-modules": "^6.0.0",
+    "tsx": "^3.11.0"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19",
