fixed some dependecy errors

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-modal": "^3.12.1",
     "bootstrap": "^5.3.0",
+    "customize-cra": "^1.0.0",
     "dayjs": "^1.10.7",
     "detect-newline": "^4.0.0",
     "enzyme": "^3.11.0",
@@ -46,9 +47,11 @@
     "i18next-http-backend": "^1.4.1",
     "jest-docblock": "^27.4.0",
     "js-cookie": "^3.0.1",
+    "markdown-toc": "^1.2.0",
     "node-sass": "^9.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.4",
     "react-datepicker": "^4.2.0",
     "react-dom": "^17.0.2",
@@ -58,6 +61,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
@@ -78,7 +82,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\"",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
-    "jest-preview": "jest-preview"
+    "jest-preview": "jest-preview",
+    "update:toc": "node scripts/githooks/update-toc.js"
   },
   "eslintConfig": {
     "extends": [
@@ -111,7 +116,6 @@
     "@typescript-eslint/parser": "^5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
-    "customize-cra": "^1.0.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
@@ -120,14 +124,15 @@
     "jest-location-mock": "^1.0.9",
     "jest-preview": "^0.3.1",
     "jquery": "^3.2.1",
-    "postcss-modules": "^6.0.0",
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^5.0.1"
+    "postcss-modules": "^6.0.0"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2",
     "graphql": "^16.5.0"
+  },
+  "engines": {
+    "node": ">=20.x"
   }
 }
