--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -55,7 +55,6 @@ jobs:
   Check-Changed-Files:
     runs-on: ubuntu-latest
     needs: Code-Quality-Checks
-      
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
@@ -67,7 +66,7 @@ jobs:
 
       - name: Run Python script
         run: |
-          python .github/workflows/count_changed_files.py "${{ github.base_ref }}" "${{ github.head_ref }}"
+          python .github/workflows/count_changed_files.py --base_branch "${{ github.base_ref }}" --PR_branch "${{ github.head_ref }}"
 
   Test-Application:
     name: Test Application
