restore original scripts

--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "test": "cross-env NODE_ENV=test node scripts/test.js --env=./scripts/custom-test-env.js --watchAll --coverage",
     "eject": "react-scripts eject",
     "lint:check": "eslint \"**/*.{ts,tsx}\" --max-warnings=0",
-    "lint:fix": "eslint --fix",
-    "format:fix": "prettier --write",
+    "lint:fix": "eslint --fix **/*.{ts,tsx}",
+    "format:fix": "prettier --write **/*.{ts,tsx,json,scss,css}",
     "format:check": "prettier --check \"**/*.{ts,tsx,json,scss,css}\"",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "prepare": "husky install",
