--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "**/*.{ts,tsx}": "npm run lint:fix",
-  "**/*.{ts,tsx,json,scss,css}": "npm run format:fix"
+  "**/*.{ts,tsx,yml}": "eslint --fix",
+  "**/*.{ts,tsx,json,scss,css,yml}": "prettier --write"
 }
