--- a/package.json
+++ b/package.json
@@ -116,6 +116,8 @@
     "@typescript-eslint/parser": "^5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
