fix: removed all localhost

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
 # If you want to logs Compiletime and Runtime error , warning and info write YES or if u want to  
 # keep the console clean leave it blank
 ALLOW_LOGS=""
+
+# base url of talawa-admin for plugin store.
+REACT_BASE_URL=http://localhost:3000 
