--- a/.env.example
+++ b/.env.example
@@ -24,4 +24,4 @@ REACT_APP_BACKEND_WEBSOCKET_URL=ws://localhost:4000/graphql
 
 # If you want to logs Compiletime and Runtime error , warning and info write YES or if u want to  
 # keep the console clean leave it blank
-ALLOW_LOGS=""
+ALLOW_LOGS=
