--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@apollo/react-testing": "^4.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@jest/core": "^29.7.0",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.14.1",
     "@mui/system": "^5.14.12",
@@ -33,7 +32,6 @@
     "lint-staged": "^15.2.0",
     "markdown-toc": "^1.2.0",
     "node-sass": "^9.0.0",
-    "npm": "^10.3.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
@@ -46,11 +44,10 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "sane": "^5.0.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
@@ -89,36 +86,36 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/enzyme": "^3.10.9",
+    "@types/js-cookie": "^3.0.2",
+    "@types/react": "^17.0.14",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.24",
-    "@types/js-cookie": "^3.0.2",
     "@types/node": "^12.20.16",
-    "@types/react": "^17.0.14",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^17.0.9",
     "@types/react-google-recaptcha": "^2.1.5",
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "cross-env": "^7.0.3",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0",
-    "jest-enzyme": "^4.2.0",
+    "jest": "^27.4.5",
+    "jest-enzyme": "^7.1.2",
     "jest-localstorage-mock": "^2.4.19",
     "jest-location-mock": "^1.0.9",
-    "jest-preview": "^0.2.3",
-    "postcss-modules": "^6.0.0"
+    "jest-preview": "^0.3.1",
+    "postcss-modules": "^6.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.4",
+    "eslint-plugin-prettier": "^3.4.0"
   },
   "resolutions": {
     "@apollo/client": "^3.4.0-beta.19",
