--- a/.github/workflows/authorized-changes-detection.yml
+++ b/.github/workflows/authorized-changes-detection.yml
@@ -16,6 +16,7 @@ on:
       - '.github/**'   
       - 'env.example'
       - '.husky/**'
+      - '.scripts/**'
       - 'package.json'
       - 'tsconfig.json'
       - '.gitignore'
